styling fixes after user testing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,7 +61,7 @@
     color: black;
 }
 
-body {
+html, body {
     overscroll-behavior: none;
 }
 
